--- a/views/html/home.html
+++ b/views/html/home.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js"></script>
     <title>Home</title>
 </head>
 <body>
     <div>
         <header>
             <div class="banner">
-                Acceuil
+                Home
             </div>
             <hr>
             <nav>
@@ -46,7 +47,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año <span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -70,7 +71,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -93,7 +94,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -116,7 +117,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -124,7 +125,7 @@
                 </article>
             </section>
         </main>
-        <button class="cta">Add new</button>
+        <button class="button-cta">Add new</button>
         <footer>
             Copyright 2024 - Cite À Sion
         </footer>
