--- a/views/html/my-citations.html
+++ b/views/html/my-citations.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
-    <title>My citations</title>
+    <script src="../js/index.js"></script>
+    <title>My Quotes</title>
 </head>
 <body>
     <div>
         <header>
             <div class="banner">
-                Mes Citations
+                My Quotes
             </div>
             <hr>
             <nav>
@@ -50,7 +51,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -73,7 +74,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -96,7 +97,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -119,7 +120,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -127,7 +128,7 @@
                 </article>
             </section>
         </main>
-        <button class="cta">Add new</button>
+        <button class="button-cta">Add new</button>
         <footer>
             Copyright 2024 - Cite À Sion
         </footer>
