--- a/views/html/search-result.html
+++ b/views/html/search-result.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js"></script>
     <title>Results</title>
 </head>
 <body>
     <div>
         <header>
             <div class="banner">
-                Résultats
+                Results
             </div>
             <hr>
             <nav>
@@ -42,7 +43,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -65,7 +66,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -88,7 +89,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -111,7 +112,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año
+                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
                     </div>
                     <div class="quote-author">
                             Newton
@@ -119,7 +120,7 @@
                 </article>
             </section>
         </main>
-        <button class="cta">Add new</button>
+        <button class="button-cta">Add new</button>
         <footer>
             Copyright 2024 - Cite À Sion
         </footer>
