--- a/views/html/login.html
+++ b/views/html/login.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js"></script>
     <title>Login</title>
 </head>
 <body>
     <div>
         <header>
             <div class="banner">
-                Se connecter
+                Login
             </div>
             <hr>
             <nav class="outside">
