--- a/views/html/settings.html
+++ b/views/html/settings.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js"></script>
     <title>Settings</title>
 </head>
 <body>
     <div>
         <header>
             <div class="banner">
-                Paramètres
+                Settings
             </div>
             <hr>
             <nav>
@@ -48,7 +49,7 @@
                         <input type="reset" value="Cancel">
                         <input type="submit" value="Submit">
                     </div>
-                    <button class="del-account" type="button">
+                    <button class="button-warn" type="button">
                         Supprimer votre compte
                     </button>
                 </div>
