--- a/views/html/sign-in.html
+++ b/views/html/sign-in.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js"></script>
     <title>Sign-in</title>
 </head>
 <body>
@@ -63,5 +62,7 @@
             Copyright 2024 - Cite À Sion
         </footer>
     </div>
+    <script src="../js/index.js"></script>
+    <script type="module" src="../js/menu.js"></script>
 </body>
 </html>
