--- a/views/html/search-result.html
+++ b/views/html/search-result.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
     <title>Results</title>
 </head>
 <body>
-    <div>
+    <add-new show="no"></add-new>
+    <div id="body">
         <me-nu show="no"></me-nu>
         <header>
             <div class="banner">
@@ -43,7 +45,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
+                            evolucionado a través de los año.
                     </div>
                     <div class="quote-author">
                             Newton
@@ -66,7 +68,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
+                            evolucionado a través de los año.
                     </div>
                     <div class="quote-author">
                             Newton
@@ -89,7 +91,7 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
+                            evolucionado a través de los año.
                     </div>
                     <div class="quote-author">
                             Newton
@@ -112,14 +114,14 @@
                             About
                             web que usan este texto si se encuentran en
                             estado de desarrollo. Muchas versiones han
-                            evolucionado a través de los año<span class="quote-detail">see more ...</span>
+                            evolucionado a través de los año.
                     </div>
                     <div class="quote-author">
                             Newton
                     </div>
                 </article>
             </section>
-            <button class="button-cta">Add new</button>
+            <button class="button-cta" type="button">Add new</button>
         </main>
         <footer>
             Copyright 2024 - Cite À Sion
@@ -127,5 +129,11 @@
     </div>
     <script src="../js/index.js"></script>
     <script type="module" src="../js/menu.js"></script>
+    <script type="module" src="../js/popup/publish.js"></script>
+    <script>
+        document.querySelector(".button-cta").addEventListener("click", ()=> {
+            document.querySelector("add-new").setAttribute("show", "yes");
+        });
+    </script>
 </body>
 </html>
