--- a/views/html/settings.html
+++ b/views/html/settings.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <me-nu active="settings" show="no"></me-nu>
+        <me-nu active="settings"></me-nu>
         <header>
             <div class="banner">
                 Settings
