--- a/views/html/sign-in.html
+++ b/views/html/sign-in.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="shortcut icon" href="../img/logo.svg" type="image/x-icon">
     <title>Sign-in</title>
 </head>
 <body>
@@ -22,13 +23,13 @@
             <form action="" method="post">
                 <div class="change-infos">
                     <div class="sign-in-pseudo">
-                        <label for="pseudo">Pseudo</label>
-                        <input type="text" name="pseudo" id="pseudo">
+                        <!--<label for="pseudo">Pseudo</label>-->
+                        <input type="text" name="pseudo" id="pseudo" placeholder="Pseudo">
                     </div>
                     <div class="sign-in-you-are">
-                        <span>---- Vous êtes? ----</span>
+                        <!--<span>---- Vous êtes? ----</span>-->
                         <select name="you-are" id="you-are" title="you-are">
-                            <option value="nan"></option>
+                            <option value="nan">Vous êtes?</option>
                             <option value="">Philosophe</option>
                             <option value="">Amateur</option>
                             <option value="">Écrivain</option>
@@ -36,16 +37,16 @@
                         </select>
                     </div>
                     <div class="sign-in-email">
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
+                        <!--<label for="email">Email</label>-->
+                        <input type="email" name="email" id="email" placeholder="Email">
                     </div>
                     <div class="sign-in-password">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
+                        <!--<label for="password">Password</label>-->
+                        <input type="password" name="password" id="password" placeholder="Password">
                     </div>
                     <div class="sign-in-confirm-password">
-                        <label for="confirm-password">Confirm</label>
-                        <input type="password" name="confirm-password" id="confirm-password">
+                        <!--<label for="confirm-password">Confirm</label>-->
+                        <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm">
                     </div>
                     <div class="res-sub">
                         <input type="reset" value="Reset">
